--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = ""
+baseURL = "https://ltm2025.netlify.app"
 languageCode = "en-us"
 DefaultContentLanguage = "en"
 title = "Blog của NTT"
